# OpenEarth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  compose.yaml  min_mvp.py  pyproject.toml  requirements.txt  run_openearth.command
.github/workflows/: ci.yml
app/: analysis.py  config.py  errors.py  main.py  roi.py  wind_overlay.py
app/tabs/: animation.py  compare.py  image_export.py  placeholders.py  spatial_map.py  statistics.py  time_series.py
apps/web/: eslint.config.js  index.html  openapi.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  embeddingsQueries.ts  methaneQueries.ts  queries.ts  sse.test.ts  sse.ts  timelapseQueries.ts  types.gen.ts  types.ts
apps/web/src/features/compare/: CompareControls.tsx  CompareView.tsx
apps/web/src/features/embeddings/: EmbeddingsView.tsx
apps/web/src/features/explore/: AnimationBar.tsx  CatalogBrowser.tsx  ChartPanel.tsx  DateControl.tsx  ExplorePage.tsx  ExportDialog.tsx  LayerEngine.tsx  LayerPanel.tsx  Legend.tsx  PeriodPicker.tsx  RoiToolbar.tsx  SeriesChart.tsx  StatsCards.tsx  TimeWindowPicker.tsx  WorkspaceMenu.tsx
apps/web/src/features/methane/: DetectionDetail.tsx  DetectionFeed.tsx  McHistogram.tsx  MethanePage.tsx  RunPanel.tsx  SceneStrip.tsx  ScreeningDialog.tsx  SiteList.tsx  ValidationPanel.tsx
apps/web/src/features/settings/: CustomDatasetEditor.tsx  SettingsPage.tsx
apps/web/src/features/timelapse/: AdvancedPanel.tsx  AvailabilityTimeline.tsx  FramePlayer.tsx  Inspector.tsx  PlaybackBar.tsx  ProgramMonitor.tsx  RenderGallery.tsx  StudioControls.tsx  TimelapsePage.tsx  useFrameTransport.ts
apps/web/src/lib/: animation.test.ts  animation.ts  geo.test.ts  geo.ts  manifest.test.ts  manifest.ts  methane.test.ts  methane.ts  plate.test.ts  plate.ts  presets.test.ts  presets.ts  series.test.ts  series.ts  time.ts  timeWindow.test.ts  timeWindow.ts  timelapse.test.ts  timelapse.ts  workspace.test.ts  workspace.ts
apps/web/src/map/: LabMap.tsx  MapContext.tsx  WindOverlay.tsx  WindParticles.tsx  basemap.ts  remintScheduler.test.ts  remintScheduler.ts  useBrowseFrames.ts  useCompareSide.ts  useImageFrames.ts  useInspector.ts  useMintLayer.ts  useRasterLayer.ts  useTerraDraw.ts  useTileRemint.ts
apps/web/src/map/wind/: WindParticleLayer.ts  glUtil.ts  shaders.ts  windTexture.test.ts  windTexture.ts
apps/web/src/stores/: analysisStore.ts  compareStore.test.ts  compareStore.ts  dateStore.ts  layersStore.test.ts  layersStore.ts  methaneStore.test.ts  methaneStore.ts  playbackStore.ts  roiStore.test.ts  roiStore.ts  timelapseStore.test.ts  timelapseStore.ts  uiStore.ts  windStore.ts  workspaceStore.ts
apps/web/src/types/: maplibre-gl-compare.d.ts
docker/: api.Dockerfile  nginx.conf  web.Dockerfile
docs/: architecture.md  deploy.md  methane_methods.md  parity-checklist.md  phase10-execution-plan.md  phase10-studio-directions.html  phase2-execution-plan.md  phase3-execution-plan.md  phase3.5-execution-plan.md  phase4-execution-plan.md  phase5-execution-plan.md  phase5-stage4b-handoff.md  phase6-execution-plan.md  phase7-execution-plan.md  phase8-execution-plan.md  phase9-execution-plan.md  plan.md  roadmap.md
docs/examples/: modis_lst.toml
docs/paper/: .gitignore  Makefile  paper.tex  references.bib
docs/paper/figures/: make_figures.py
docs/research/: methane-detection-methods-research.md  methane-implementation-audit-vs-literature.md
docs/reviews/: tier1-quantification-findings.md  tier2-ml-protocol-findings.md  tier3-plumbing-findings.md
docs/reviews/data/: instrumented.json  ml_label_q_aggregate.json  noise_chip.json
legacy/: README.md  pyproject.toml  run_openearth.command
legacy/app/: analysis.py  main.py
legacy/src/openearth/: __init__.py
legacy/src/openearth/analytics/: __init__.py  conversions.py  daily_timeseries.py  source_classification.py
legacy/src/openearth/providers/: __init__.py  gee_era5.py  gee_s1.py  gee_s2.py  s5p_registry.py
legacy/src/openearth/visualization/: heatmap.py
scripts/: calibration_harness.py  curate_calibration_events.py  dev.sh  export_ch4net_chips.py  export_openapi.py  fetch_ch4net.py  fetch_s2ch4.py  generate_ch4_lut.py  noise_floor.py  recover_ch4net_metadata.py  s2ch4_benchmark.py  spike_4k_thumb.py  spike_hls_scaling.py  validate_events.py
scripts/data/: afgl_us_standard_h2o.csv  calibration_baseline_v3.json  calibration_baseline_v4.json  calibration_baseline_v5.1.json  calibration_baseline_v5.json  calibration_events.json  ml_eval_v1.json  ml_eval_v2.json  s2_srf_b11_b12.csv  s2ch4_benchmark_v1.json  s2ch4_benchmark_v2.json  tsis1_hsrs_b11_b12.csv
src/: __init__.py
src/openearth/: __init__.py  errors.py
src/openearth/analytics/: __init__.py  conversions.py  daily_timeseries.py  no2_daily.py  smoothing.py  source_classification.py  trace_gas_daily.py
src/openearth/masking/: vegetation_water.py
src/openearth/providers/: __init__.py  gas_registry.py  gee_era5.py  gee_no2.py  gee_s2.py  gee_s5p.py  gee_session.py  gee_trace_gas.py  s1_registry.py  s2_registry.py  s5p_registry.py
src/openearth/visualization/: __init__.py  heatmap.py  no2_heatmap.py  trace_gas_heatmap.py
