[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openearth-legacy"
version = "0.1.0"
description = "OpenEarth Explorer v1 (Streamlit) — frozen legacy app, kept runnable until v2 reaches parity."
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.7,<2",
    "pandas>=2.0,<3",
    "streamlit>=1.30,<2",
    "folium>=0.15,<1",
    "streamlit-folium>=0.20,<1",
    "altair>=5.0,<7",
    "numpy>=1.24,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openearth*"]
